# social_agent_simulation_platform

./: .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  AGENTS.md  AUTH_MIGRATION.md  CHANGELOG.md  Dockerfile  Dockerfile.feature-extraction  PROPOSAL.md  README.md  TEMP_FINDINGS.md  UI_MIGRATION.md  architecture.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci-e2e.yml  ci.yml  cursor-daily-quality-check.yml
ai/: create_initial_agents.py
db/: __init__.py  config.py  config.yaml  db.sqlite  exceptions.py  schema.py
db/adapters/: __init__.py  base.py
db/backfills/: __init__.py  agent_posts.py
db/migrations/: README  env.py
db/repositories/: __init__.py  agent_bio_repository.py  agent_follow_edge_repository.py  agent_generated_bio_repository.py  agent_liked_post_repository.py  agent_linked_agent_repository.py  agent_post_comment_repository.py  agent_post_like_repository.py  agent_post_repository.py  agent_profile_comment_repository.py  agent_repository.py  agent_seed_comment_repository.py  agent_seed_follow_repository.py  agent_seed_like_repository.py  app_user_repository.py  comment_repository.py  feed_post_repository.py  follow_repository.py  generated_bio_repository.py  generated_feed_repository.py  interfaces.py  like_repository.py  metrics_repository.py  profile_repository.py  run_agent_repository.py  run_follow_edge_repository.py  run_post_comment_repository.py  run_post_like_repository.py  run_post_repository.py  run_repository.py  turn_post_repository.py  user_agent_profile_metadata_repository.py
db/services/: __init__.py  run_deletion_sqlite.py  simulation_persistence_service.py  turn_persistence_service.py
docs/: CURRENT_TURN_FINDINGS.md  README.md  RULES.md  SUGGESTED_CUSTOM_LINTERS.md  api-contract.md
docs/architecture/: agents-turns-runs-data-model.md  post-author-agent-id.md  run-snapshots.md  seed-state-run-snapshot-turn-events.md  simulation-actions-model.md  turn-feed-post-id-contract.md
docs/db/: LATEST.txt  README.md
docs/feature_ideas/: 2026-02-21_feature_ideas.md  2026-02-24_feature_ideas.md  2026-02-25-2_feature_ideas.md  2026-02-25_feature_ideas.md  2026-03-07_feature_ideas.md  2026-03-08_feature_ideas.md  2026-03-11_feature_ideas.md  2026-03-14_feature_ideas.md  2026-03-18_feature_ideas.md
docs/plans/: agents_backend_and_view_integration_0b63a071.plan.md  index.md
docs/runbooks/: API_GATEWAY_FASTAPI.md  API_REFERENCE.md  CREATE_NEW_PYTHON_TESTS.md  CURSOR_CLOUD_ENV_SETUP.md  DB_SCHEMA_DOCS.md  HOW_TO_CREATE_NEW_FEED_RANKING_ALGORITHM.md  HOW_TO_CREATE_NEW_METRIC.md  HOW_TO_UPDATE_CHANGELOG.md  LOAD_TESTING.md  LOCAL_DEVELOPMENT.md  LOCAL_DEV_AUTH.md  PRE_COMMIT_AND_LINTING.md  PRODUCTION_DEPLOYMENT.md  PYTHON_DI_GUARD.md  RAILWAY_DEPLOYMENT.md  SMOKE_TEST.md  UI_DEPLOYMENT.md  UPDATE_SCHEMAS.md  UPDATE_SEED_DATA.md  setup-oasis.md
docs/weekly_updates/: 2026-02-16_2026-02-21.md  2026-02-23_2026-02-28.md  2026-02-23_2026-03-01.md  2026-03-02_2026-03-08.md
experiments/: README.md
experiments/oasis_simulator_2026_03_25/: README.md
feeds/: algorithms.py  candidate_generation.py  constants.py  feed_generator.py  feed_generator_adapter.py  interfaces.py
feeds/algorithms/: __init__.py  interfaces.py  registry.py  validators.py
gateway/: __init__.py
gateway/api/: __init__.py  main.py  proxy.py  settings.py
jobs/: generate_profile_bios.py  load_initial_bluesky_profiles.py  migrate_agents_to_new_schema.py  view_database.py  view_generated_bios.py  view_generated_feeds.py
lib/: __init__.py  agent_id.py  bluesky_client.py  constants.py  decorators.py  env_utils.py  langfuse_telemetry.py  load_env_vars.py  rate_limiting.py  request_logging.py  run_rng.py  security_headers.py  sql_like.py  timestamp_utils.py  validation_decorators.py  validation_utils.py
lint/semgrep/: python-di.yml  python-time-source.yml
ml_tooling/: __init__.py
ml_tooling/api/: __init__.py  main.py
ml_tooling/emotion/: classifier.py  constants.py  examples_test.py  models.py
ml_tooling/llm/: __init__.py  _env.py  exceptions.py  llm_service.py  retry.py
ml_tooling/ner/: classifier.py  examples_test.py  model.py  models.py
ml_tooling/polarity/: classifer.py  classifier.py  constants.py  examples_test.py  models.py
ml_tooling/verification/: helpers.py
scripts/: __init__.py  _schema_utils.py  backfill_agent_posts.py  check_db_schema_drift.py  check_docs_metadata.py  generate_db_schema_docs.py  generate_openapi_json.py  generate_seed_metrics_fixtures.py  lint_architecture.py  lint_pytest_class_convention.py  lint_python_testing_syntax_conventions.py  lint_schema_conventions.py  load_test_simulation.py  setup_cursor_cloud_env.sh  update_seed_data.py
scripts/migrations/: __init__.py  agent_id_migration.py
simulation/: README.md  main.py
simulation/api/: constants.py  context.py  dummy_data.py  errors.py  exception_handlers.py  main.py  middleware.py
simulation/bootstrap/: __init__.py  railway.py
simulation/core/: __init__.py  action_history.py  action_invariant_policy.py  agent_action_feed_filter.py  agent_action_history_recorder.py  agent_action_rules_validator.py  agent_actions.py  command_service.py  command_service_bundles.py  dependencies.py  deterministic_like_policy.py  engine.py  exceptions.py  ports.py  query_service.py  seed_state.py  validators.py
simulation/local_dev/: derive_from_metadata.py  local_mode.py  seed_loader.py  seed_metrics_fixtures.py
simulation_v2/: agent.py  config.py  feeds.py  ids.py  legacy_feeds.py  load_seed_data.py  logging_config.py  main.py  run_summary.py  seed_data.py  simulate_run.py  simulate_turn.py  time.py
simulation_v2/actions/: __init__.py  executor.py  llm.py  models.py  prompts.py  service.py  validators.py
temp/: PROPOSED_AGENT_DETAIL_MIGRATION.md
tests/: README.md  conftest.py  factories.py  test_docs_metadata.py  test_factories.py  test_factories_hypothesis.py  test_simulation_v2_progress_decorators.py  test_validation_decorators.py
ui/: eslint.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json
ui/app/: page.tsx  (+1 more)
(+771 files in other folders)
