[project]
name = "agent-simulation-platform"
version = "0.1.0"
description = "Social Media AI Agent Simulation Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
    "litellm>=1.59.10",
    "tenacity>=8.2.3",
    "atproto>=0.0.63",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langfuse>=3.10.1",
    "openai>=2.8.1",
    "pyjwt>=2.8.0",
    "pydantic>=2.12.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "faker>=24.0.0,<41",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "complexipy>=5.0.0",
    "pre-commit>=4.0.0",
    "import-linter>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: smoke tests against a running API (set SIMULATION_API_URL to run).",
]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "-v",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["simulation", "db", "ai", "lib", "feeds", "jobs", "ml_tooling"]

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.importlinter]
root_packages = ["simulation", "db", "lib", "feeds", "ai", "jobs", "ml_tooling"]
include_external_packages = false
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Domain purity: simulation.core.models"
type = "forbidden"
source_modules = ["simulation.core.models"]
forbidden_modules = [
    "simulation.api",
    "db",
    "feeds",
    "ai",
    "jobs",
    "ml_tooling",
    # simulation.core.* excluding simulation.core.models
    "simulation.core.action_generators",
    "simulation.core.action_history",
    "simulation.core.action_policy",
    "simulation.core.command_service",
    "simulation.core.engine",
    "simulation.core.exceptions",
    "simulation.core.factories",
    "simulation.core.handle_utils",
    "simulation.core.metrics",
    "simulation.core.query_service",
    "simulation.core.utils",
    "simulation.core.validators",
]

[[tool.importlinter.contracts]]
name = "lib is leaf"
type = "forbidden"
source_modules = ["lib"]
forbidden_modules = ["simulation", "db", "feeds", "ai", "jobs", "ml_tooling"]

[[tool.importlinter.contracts]]
name = "ml_tooling constraints"
type = "forbidden"
source_modules = ["ml_tooling"]
forbidden_modules = ["simulation", "db", "feeds", "ai", "jobs"]

[[tool.importlinter.contracts]]
name = "API routes boundary: simulation.api.routes"
type = "forbidden"
source_modules = ["simulation.api.routes"]
forbidden_modules = ["simulation.core", "db", "feeds", "ai", "jobs", "ml_tooling"]
allow_indirect_imports = true


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/db/migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# Placeholder only; env.py overrides with the real URL (see db/migrations/README).
sqlalchemy.url = "sqlite:///:memory:"

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the python>=3.9 or backports.zoneinfo library and tzdata library.
# Any required deps can installed by adding `alembic[tz]` to the pip requirements
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
